src/Services/wmsServices/deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wms
  labels:
    app.kubernetes.io/part-of: wms-platform
    app.kubernetes.io/managed-by: kubectl
